[package]
name = "rust-github-action-experiment"
version = "0.1.0"
authors = ["mkazutaka <paper.sheet.kami@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
serde = "1"
diesel = "1"

